<resources>
    <string name="app_name">KochkarovAndroidPvt</string>

    <string name="dzButtonStr">DZ0</string>
    <string name="dz1ButtonStr">DZ1</string>
    <string name="dz2ButtonStr">DZ2</string>
    <string name="dz2LoginButtonStr">DZ2Login</string>
    <string name="dz3ButtonStr">DZ3</string>
    <string name="dz4ButtonStr">DZ4</string>
    <string name="dz5PieButtonStr">DZ5Pie</string>
    <string name="dz5OwlButtonStr">DZ5Owl</string>
    <string name="dz6ButtonStr">DZ6</string>
    <string name="dz8ButtonStr">DZ8</string>
    <string name="dz9ButtonStr">DZ9</string>
    <string name="dz11MVPButtonStr">DZ11 MVP</string>
    <string name="dz11MVVMButtonStr">DZ11 MVVM</string>

    <string name="textA">AAAA</string>
    <string name="textB">BBBB</string>
    <string name="textButton">Click Me</string>

    <string name="dz2LoginUser">Username</string>
    <string name="dz2LoginPassword">Password</string>
    <string name="dz2LoginLogin">LOG IN</string>
    <string name="dz2LoginForgot"><u>Forgot your username/password?</u></string>
    <string name="dz2LoginCreate">CREATE ACCOUNT</string>

    <string name="dz3UserFullName">Name</string>
    <string name="dz3UserCountry">Country</string>
    <string name="dz3UserPostal">Postal code</string>
    <string name="dz3UserBirth">Date of birth</string>
    <string name="dz3UserGender">Gender</string>
    <string name="dz3UserHeight">Height</string>
    <string name="dz3UserPhone">Phone</string>

    <string name="dz3UserFullNameInfo">Nial Brockman</string>
    <string name="dz3UserCountryInfo">USA</string>
    <string name="dz3UserPostalInfo">60604</string>
    <string name="dz3UserBirthInfo">Feb. 21, 2000</string>
    <string name="dz3UserGenderInfo">Male</string>
    <string name="dz3UserHeightInfo">6\'1\"</string>
    <string name="dz3UserPhoneInfo">(781) 547-3320</string>

    <string name="dz3TabTrophies">Trophies</string>
    <string name="dz3TabFollowing">Following</string>
    <string name="dz3TabFollowers">Followers</string>

    <string name="dz3Trophies">4</string>
    <string name="dz3Following">54</string>
    <string name="dz3Followers">12</string>

    <string name="imageURL">http://i.imgur.com/H981AN7.jpg</string>
    <string name="buttonLoad">LOAD IMAGE</string>

    <string name="dz6FilterText">Enter student\s name here</string>
    <string name="dz6SaveButton">SAVE</string>
    <string name="dz6EditButton">EDIT</string>
    <string name="dz6DeleteButton">DELETE</string>
    <string name="dz6FullNameEdit">Full Name</string>
    <string name="dz6AgeEdit">Age</string>
    <string name="dz6UrlEdit">Icon URL</string>
    <string name="dz6NotFound">Student with the given id not found!</string>
    <string name="dz6WrongName">Wrong input in name field!</string>
    <string name="dz6WrongAge">Wrong input in age field!</string>
    <string name="dz6WrongUrl">Wrong input in URL field!</string>

    <string name="dz9ButtonSheetName">Open</string>
    <string name="dz9ButtonSheetClose">Close</string>
    <string name="dz9Longitude">Longitude:</string>
    <string name="dz9Latitude">Latitude:</string>
    <string name="dz9ErrorMessage">Wasn\'t able to load vehicles!</string>
</resources>