<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dz0.Dz0Activity">
    <Button
            android:text="@string/textButton"
            android:layout_width="360dp"
            android:layout_height="65dp"
            android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.49" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"/>
    <TextView
            android:text="@string/textA"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:id="@+id/textA" android:visibility="visible"
            android:textSize="36sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="184dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/textB"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible"
            android:textSize="36sp" android:layout_marginTop="284dp" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>